src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>The Latitude and Longitude in decimal format.</inlineHelpText>
        <label>Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MapDescription__c</fullName>
        <formula>Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapSubject__c</fullName>
        <formula>CaseNumber + &quot;: &quot; + Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapSubject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iconField__c</fullName>
        <formula>IF(MOD(VALUE(CaseNumber), 2) == 0, &apos;/mapIcons/green-dot.png&apos;, &apos;/mapIcons/red-dot.png&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>iconField</label>
        <type>Text</type>
    </fields>
</CustomObject>